# mosh

./: CMakeLists.txt
dockerfiles/: Dockerfile  Dockerfile.gentoo  Dockerfile.ubuntu
src/include/: version.h
